--- a/public/template/shopping/buy.html
+++ b/public/template/shopping/buy.html
@@ -4,16 +4,16 @@
 	<meta charset="UTF-8">
 	<meta name="format-detection" content="telephone=no"/>
 	<meta name="screen-orientation" content="portrait">
-	<title>二哲 - Vue构建多页项目</title>
-	<link rel="stylesheet" href="../../static/css/home/index.css">
+	<title>二哲 - vue多页项目构建</title>
+	<link rel="stylesheet" href="../../static/css/shopping/buy.css">
 </head>
 <body>
+<h3 id="buy">我是buy全局样式</h3>
 <div id="container">
+	<list></list>
 	<loading></loading>
-	<index-info></index-info>
-	<div id="kodo"></div>
 </div>
 <script src="../../static/js/vue.js"></script>
-<script src="../../static/js/home/index.js"></script>
+<script src="../../static/js/shopping/buy.js"></script>
 </body>
 </html>
