--- a/src/views/home/index.html
+++ b/src/views/home/index.html
@@ -5,14 +5,15 @@
 	<meta name="format-detection" content="telephone=no"/>
 	<meta name="screen-orientation" content="portrait">
 	<title>二哲 - Vue构建多页项目</title>
+	<link rel="stylesheet" href="../../static/css/home/index.css">
 </head>
 <body>
 <div id="container">
 	<loading></loading>
 	<index-info></index-info>
-
+	<div id="kodo"></div>
 </div>
-<script src="../../static/es6/vue.js"></script>
-<script src="../../static/es6/home/index.es6.js"></script>
+<script src="../../static/js/vue.js"></script>
+<script src="../../static/js/home/index.js"></script>
 </body>
 </html>
