--- a/public/template/home/index.html
+++ b/public/template/home/index.html
@@ -12,7 +12,7 @@
 	<loading></loading>
 	<index-info></index-info>
 </div>
-<script src="../../static/js/vue.js"></script>
-<script src="../../static/js/home/index.js"></script>
+<script src="../../static/es6/lib/vue.js"></script>
+<script src="../../static/es6/home/index.js"></script>
 </body>
 </html>
