--- a/public/views/home/index.html
+++ b/public/views/home/index.html
@@ -5,7 +5,7 @@
 	<meta name="format-detection" content="telephone=no"/>
 	<meta name="screen-orientation" content="portrait">
 	<title>二哲 - Vue构建多页项目</title>
-	<link rel="stylesheet" href="../../static/css/home/index.css">
+	<link rel="stylesheet" href="YourCDNLinkstatic/css/home/index-89afa22702.css">
 </head>
 <body>
 <div id="container">
@@ -13,7 +13,7 @@
 	<index-info></index-info>
 	<div id="kodo"></div>
 </div>
-<script src="../../static/es6/lib/vue.js"></script>
-<script src="../../static/es6/home/index.js"></script>
+<script src="YourCDNLinkstatic/es6/lib/vue-0cffaa966a.js"></script>
+<script src="YourCDNLinkstatic/es6/home/index-b53a1ff947.js"></script>
 </body>
 </html>
