--- a/src/views/home/index.html
+++ b/src/views/home/index.html
@@ -11,7 +11,7 @@
 <div id="container">
 	<loading></loading>
 	<index-info></index-info>
-	<div id="kodo"></div>
+	<div id="kodo" @click="sayHi">打开控制台,看netWork 我是异步加载的js模块</div>
 </div>
 <script src="../../static/es6/lib/vue.js"></script>
 <script src="../../static/es6/home/index.js"></script>
