update:各种cdn黑科技啊。。

--- a/public/views/home/index.html
+++ b/public/views/home/index.html
@@ -5,15 +5,16 @@
 	<meta name="format-detection" content="telephone=no"/>
 	<meta name="screen-orientation" content="portrait">
 	<title>二哲 - Vue构建多页项目</title>
-	<link rel="stylesheet" href="YourCDNLinkstatic/css/home/index-89afa22702.css">
+	<link rel="stylesheet" href="../../static/css/home/index-89afa22702.css">
 </head>
 <body>
 <div id="container">
+	<my-head></my-head>
 	<loading></loading>
 	<index-info></index-info>
 	<div id="kodo" @click="sayHi">打开控制台,看netWork 我是异步加载的js模块</div>
 </div>
-<script src="YourCDNLinkstatic/es6/lib/vue-0cffaa966a.js"></script>
-<script src="YourCDNLinkstatic/es6/home/index-4d82661d5b.js"></script>
+<script src="../../static/es6/lib/vue-0cffaa966a.js"></script>
+<script src="../../static/es6/home/index-d39b97ffda.js"></script>
 </body>
 </html>
