--- a/src/views/home/index.html
+++ b/src/views/home/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
 <div id="container">
+	<my-head></my-head>
 	<loading></loading>
 	<index-info></index-info>
 	<div id="kodo" @click="sayHi">打开控制台,看netWork 我是异步加载的js模块</div>
