--- a/public/views/home/test.html
+++ b/public/views/home/test.html
@@ -10,7 +10,7 @@
 <div id="container">
 	<my-head></my-head>
 </div>
-<script src="../../static/es6/lib/vue-0cffaa966a.js"></script>
-<script src="../../static/es6/home/test-cf3a10cec1.js"></script>
+<script src="yourCDNlink/static/es6/lib/vue.js"></script>
+<script src="yourCDNlink/static/es6/home/test.js"></script>
 </body>
 </html>
