--- a/public/views/index.html
+++ b/public/views/index.html
@@ -30,6 +30,7 @@
 			background: url("yourCDNlink/static/images/home/logo.jpg");
 			background-size: cover;
 			border-radius: 50%;
+			box-shadow: 0 14px 27px 0 rgba(0, 0, 0, 0.1);
 		}
 	</style>
 </head>
