--- a/public/views/home/index.html
+++ b/public/views/home/index.html
@@ -5,7 +5,7 @@
 	<meta name="format-detection" content="telephone=no"/>
 	<meta name="screen-orientation" content="portrait">
 	<title>二哲 - Vue构建多页项目</title>
-	<link rel="stylesheet" href="yourCDNLink/static/css/home/index-89afa22702.css">
+	<link rel="stylesheet" href="../../static/css/home/index-89afa22702.css">
 </head>
 <body>
 <div id="container">
@@ -14,7 +14,7 @@
 	<index-info></index-info>
 	<div id="kodo" v-tap="sayHi">打开控制台,看netWork 我是异步加载的js模块</div>
 </div>
-<script src="yourCDNLink/static/es6/lib/vue-0cffaa966a.js"></script>
-<script src="yourCDNLink/static/es6/home/index-93232d54af.js"></script>
+<script src="../../static/es6/lib/vue-0cffaa966a.js"></script>
+<script src="../../static/es6/home/index-2e5eaf8d04.js"></script>
 </body>
 </html>
